# StupidOmaha

./: CMakeLists.txt  README.md  equity-vs-random.txt  run-build.py
cpp/: EquityVsRandom.cpp  GameThread.hpp  Manager.hpp  Params.hpp  SharedData.hpp  Sim.cpp
py/: create_equity_vs_random_plots.py  main_loop.py  manager.py  neural_net.py  py_util.py  tensor_dataset.py  train.py
